<resources>
    <string name="app_name">Drink Manager</string>
    <string name="image_content_description">Image</string>
    <string name="sign_in_label">Sign In</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="create_account_label">Create Account here. Sign Up</string>
    <string name="repeat_password_label">Repeat Password</string>
    <string name="register_label">Register</string>
    <string name="homepage_label">Home Page</string>
    <string name="alcohol_label">Alcohol</string>
    <string name="goals_label">Goals</string>
    <string name="exercises_label">Exercise</string>
    <string name="future_goals_label">Future Goals</string>
    <string name="capturizer_label">Capturizer</string>
    <string name="enter_intake_value_label">Enter Intake Value:</string>
    <string name="in_ml_label">in ML</string>
    <string name="what_intake_label">What did you Intake?</string>
    <string name="percent_alcohol_label">% of Alcohol</string>
    <string name="alcoholism_community"> Know more <a href="https://www.reddit.com/r/alcoholism">/r/alcoholism</a></string>
    <string name="science_kindness_community"> Know more <a href="https://www.reddit.com/r/ScienceAndKindness">/r/scienceAndKindness</a></string>
    <string name="stop_drinking_community"> Know more <a href="https://www.reddit.com/r/stopdrinking">/r/stopDrinking</a></string>
    <string name="addiction_community"> Know more <a href="https://www.reddit.com/r/addiction">/r/addiction</a></string>
    <string name="standard_guide_article"> Read more <a href="https://www.health.gov.au/health-topics/alcohol/about-alcohol/standard-drinks-guide">standard drinks guide</a></string>
    <string name="whatIs_alcohol_article"> Read more <a href="https://www.health.gov.au/health-topics/alcohol/about-alcohol/what-is-alcohol">what is Alcohol?</a></string>
    <string name="laws_article"> Read more <a href="https://www.health.gov.au/health-topics/alcohol/about-alcohol/alcohol-laws-in-australia">Alcohol Laws in  Australia</a></string>
    <string name="quitAlcohol_article"> Read more <a href="https://www.health.gov.au/health-topics/alcohol/about-alcohol/how-can-you-reduce-or-quit-alcohol">Quit Alcohol</a></string>
    <string name="ADF_contact"><a href="https://adf.org.au/">Alcohol and Drug Foundation</a></string>
    <string name="ATA_contact"><a href="https://alcoholthinkagain.com.au/">Alcohol. Think again</a></string>
    <string name="AAAc_contact"><a href="https://www.health.gov.au/contacts/alcoholics-anonymous-aa-australia-contact">Alcoholics Anonymous Australia contact </a></string>
    <string name="DL_contact"><a href="https://www.health.gov.au/contacts/directline">DirectLine</a></string>
    <string name="ADF_tel_contact"><a href="tel:+11300 858 584">1300 858 584</a></string>
    <string name="ATA_tel_contact"><a href="tel:+11800 198 024">1800 198 024</a></string>
    <string name="AAAc_tel_contact"><a href="tel:+11300 222 222">1300 222 222</a></string>
    <string name="DL_tel_contact"><a href="tel:+11800 888 236">1800 888 236</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
