<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".pages.login_signup.fragments.LoginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:id="@+id/progress_circular"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"></ProgressBar>
        <ImageView
            android:id="@+id/appsplash"
            android:contentDescription="@string/image_content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/goals_icon"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="App Name"
            android:layout_below="@+id/appsplash"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"/>

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_label"
            android:textColor="@color/black"
            android:layout_below="@+id/appname"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:padding="10dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="username"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/username_label"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

        <EditText
            android:autofillHints="password"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawablePadding="20dp"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_margin="50sp"
            android:backgroundTint="#7adb53"
            android:padding="10dp"
            android:text="@string/login_label"
            app:cornerRadius="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotpass"
            android:layout_below="@id/btnLogin"
            android:textColor="@color/black"
            android:text="@string/forgot_password_label"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"/>


        <TextView
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotpass"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:layout_marginBottom="20dp"
            android:text="@string/create_account_label"
            android:textColor="@color/black" />
    </RelativeLayout>