<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.login.LoginActivity">

    <data class="LoginBinder">
        <variable
            name="ViewModel"
            type="com.fitnessapp.activities.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#04235e">
        <ImageView
            android:id="@+id/appsplash"
            android:contentDescription="@string/image_content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/appsplash"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"/>

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_label"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/appname"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:padding="10dp"/>

        <EditText
            android:inputType="text"
            android:autofillHints="username"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signin"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:text="@={ViewModel.loginMutableLive.username}"
            android:drawablePadding="20dp"
            android:hint="@string/username_label"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:autofillHints="password"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:text="@={ViewModel.loginMutableLive.password}"
            android:drawablePadding="20dp"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:onClick="@{()-> ViewModel.onButtonClick()}"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:backgroundTint="#7adb53"
            android:text="@string/login_label"
            app:cornerRadius="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotpass"
            android:layout_below="@id/button"
            android:textColor="@color/white"
            android:text="@string/forgot_password_label"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"/>


        <TextView
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotpass"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:layout_marginBottom="20dp"
            android:text="@string/create_account_label"
            android:textColor="@color/white" />
    </RelativeLayout>

</layout>