<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".pages.capture.CaptureFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30sp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_launcher_foreground"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="90dp"
                    android:text="Consumption"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_intake_value_label"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/in_ml_label"
                        android:id="@+id/editTextQuantity"
                        android:background="@color/white"
                        android:inputType="text"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/Intake"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_intake_label"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/Intake"
                    android:background="@android:drawable/btn_dropdown"
                    android:layout_marginTop="10dp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent_alcohol_label"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/why"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Why are you drinking?"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
                <Spinner
                    android:id="@+id/spinnerwhy"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/why"
                    android:background="@android:drawable/btn_dropdown"
                    android:layout_marginTop="10dp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="120dp"
                    android:layout_height="60sp"
                    android:text="Cancel"
                    android:id="@+id/btnCancel"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#7adb53"/>
                <Button
                    android:layout_width="130dp"
                    android:layout_height="60sp"
                    android:text="Save"
                    android:id="@+id/btnSave"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#7adb53"
                    android:layout_margin="50dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:id="@+id/progress_circular"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"></ProgressBar>
</RelativeLayout>